[package]
name = "rplanner-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew.git" , rev = "77b46bfa407fd8ff5da098f42fa838ff4e3995ed" }
wasm-bindgen = "0.2.78"
serde_json = "1.0.68"
web-sys = "0.3.55"
pulldown-cmark = "0.8.0"
